--- a/mia/Views/Play/TopBar/HXPlayTopBar.xib
+++ b/mia/Views/Play/TopBar/HXPlayTopBar.xib
@@ -42,13 +42,13 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="z9b-AS-HOE" userLabel="Title Container View">
                             <rect key="frame" x="54" y="11" width="105" height="18"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="分享者名称" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w0Y-jw-uOk">
+                                <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="分享者名称" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w0Y-jw-uOk">
                                     <rect key="frame" x="0.0" y="0.0" width="75" height="18"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="分享" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PSq-dK-9CL">
+                                <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="分享" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PSq-dK-9CL">
                                     <rect key="frame" x="75" y="0.0" width="30" height="18"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -56,6 +56,7 @@
                                 </label>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <gestureRecognizers/>
                             <constraints>
                                 <constraint firstItem="PSq-dK-9CL" firstAttribute="leading" secondItem="w0Y-jw-uOk" secondAttribute="trailing" id="AvF-Yi-PNa"/>
                                 <constraint firstAttribute="bottom" secondItem="PSq-dK-9CL" secondAttribute="bottom" id="D31-HW-KAS"/>
@@ -65,6 +66,9 @@
                                 <constraint firstItem="w0Y-jw-uOk" firstAttribute="top" secondItem="z9b-AS-HOE" secondAttribute="top" id="vro-D1-Kmt"/>
                                 <constraint firstItem="PSq-dK-9CL" firstAttribute="top" secondItem="z9b-AS-HOE" secondAttribute="top" id="zvb-Kr-Ae2"/>
                             </constraints>
+                            <connections>
+                                <outletCollection property="gestureRecognizers" destination="pPk-qR-X7z" appends="YES" id="PjT-ie-Uy0"/>
+                            </connections>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0x5-fC-n4f" userLabel="Right Line">
                             <rect key="frame" x="167" y="20" width="15" height="1"/>
@@ -114,6 +118,11 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="176" y="350"/>
         </view>
+        <tapGestureRecognizer id="pPk-qR-X7z" userLabel="Sharer Gesture">
+            <connections>
+                <action selector="sharerTapGesture" destination="-1" id="Mjh-Cz-Xf5"/>
+            </connections>
+        </tapGestureRecognizer>
     </objects>
     <resources>
         <image name="P-BackIcon" width="25" height="25"/>
