--- a/mia/Base.lproj/Play.storyboard
+++ b/mia/Base.lproj/Play.storyboard
@@ -156,6 +156,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <inset key="separatorInset" minX="50" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        <view key="tableFooterView" contentMode="scaleToFill" id="r1w-8Q-Fii">
+                            <rect key="frame" x="0.0" y="88" width="320" height="1"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="HXPlayListCell" id="Cvs-zS-roM" userLabel="HXPlayListCell" customClass="HXPlayListCell">
                                 <rect key="frame" x="0.0" y="28" width="320" height="60"/>
