--- a/mia/Views/Play/BottomBar/HXPlayBottomBar.xib
+++ b/mia/Views/Play/BottomBar/HXPlayBottomBar.xib
@@ -98,10 +98,13 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KwV-6h-Hch">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
                     <subviews>
-                        <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="J89-Cz-qgi">
+                        <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" continuous="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J89-Cz-qgi">
                             <rect key="frame" x="53" y="25" width="214" height="31"/>
                             <color key="minimumTrackTintColor" red="0.043137254899999998" green="0.81568627449999997" blue="0.73725490199999999" alpha="1" colorSpace="calibratedRGB"/>
                             <color key="maximumTrackTintColor" red="0.92549019607843142" green="0.92549019607843142" blue="0.92549019607843142" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <action selector="valueChange:" destination="-1" eventType="valueChanged" id="hMj-WU-J94"/>
+                            </connections>
                         </slider>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7bT-od-rst">
                             <rect key="frame" x="10" y="20" width="40" height="40"/>
