--- a/mia/Base.lproj/Me.storyboard
+++ b/mia/Base.lproj/Me.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
@@ -165,8 +164,8 @@
                                                         </view>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8C3-gk-VoM">
                                                             <rect key="frame" x="33" y="33" width="35" height="35"/>
-                                                            <state key="normal" image="M-PlayIcon"/>
-                                                            <state key="selected" image="M-PauseIcon"/>
+                                                            <state key="normal" image="CM-PlayIcon"/>
+                                                            <state key="selected" image="CM-PauseIcon"/>
                                                             <connections>
                                                                 <action selector="playButtonPressed" destination="Ed6-aM-ZxE" eventType="touchUpInside" id="8YJ-Ma-DDm"/>
                                                             </connections>
@@ -350,8 +349,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="M-PauseIcon" width="35" height="35"/>
-        <image name="M-PlayIcon" width="35" height="35"/>
+        <image name="CM-PauseIcon" width="35" height="35"/>
+        <image name="CM-PlayIcon" width="35" height="35"/>
         <image name="PF-CommentIcon" width="20" height="20"/>
         <image name="PF-DeleteIcon" width="20" height="20"/>
         <image name="PF-FavoriteIcon" width="20" height="20"/>
