--- a/mia/Base.lproj/Share.storyboard
+++ b/mia/Base.lproj/Share.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
@@ -75,7 +74,7 @@
                                                     </imageView>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3ZK-C9-oiT">
                                                         <rect key="frame" x="90" y="90" width="35" height="35"/>
-                                                        <state key="normal" image="M-PlayIcon"/>
+                                                        <state key="normal" image="CM-PlayIcon"/>
                                                         <connections>
                                                             <action selector="playButtonPressed" destination="Dxq-Jl-kQw" eventType="touchUpInside" id="n4G-B8-F7M"/>
                                                         </connections>
@@ -295,6 +294,6 @@
         <image name="C-AddMusicIcon" width="45" height="45"/>
         <image name="C-CloseIcon-Red" width="10" height="10"/>
         <image name="C-LocationIcon" width="12" height="17"/>
-        <image name="M-PlayIcon" width="35" height="35"/>
+        <image name="CM-PlayIcon" width="35" height="35"/>
     </resources>
 </document>
