--- a/mia/Views/Discovery/Content/Cover/HXDiscoveryCover.xib
+++ b/mia/Views/Discovery/Content/Cover/HXDiscoveryCover.xib
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
@@ -89,8 +88,8 @@
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UBP-ye-QIy" userLabel="Play Button">
                     <rect key="frame" x="113" y="112" width="35" height="35"/>
-                    <state key="normal" image="M-PlayIcon"/>
-                    <state key="selected" image="M-PauseIcon"/>
+                    <state key="normal" image="CM-PlayIcon"/>
+                    <state key="selected" image="CM-PauseIcon"/>
                     <connections>
                         <action selector="playAction" destination="-1" eventType="touchUpInside" id="OW0-8c-EyZ"/>
                     </connections>
@@ -149,8 +148,8 @@
         </tapGestureRecognizer>
     </objects>
     <resources>
+        <image name="CM-PauseIcon" width="35" height="35"/>
+        <image name="CM-PlayIcon" width="35" height="35"/>
         <image name="D-MaskBG" width="325" height="325"/>
-        <image name="M-PauseIcon" width="35" height="35"/>
-        <image name="M-PlayIcon" width="35" height="35"/>
     </resources>
 </document>
