--- a/mia/Views/Discovery/Header/HXDiscoveryHeader.xib
+++ b/mia/Views/Discovery/Header/HXDiscoveryHeader.xib
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
@@ -13,17 +14,14 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P6d-0x-mkR">
-                    <rect key="frame" x="16" y="25" width="25" height="25"/>
+                    <rect key="frame" x="9" y="16" width="44" height="44"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="44" id="e1R-xl-hUa"/>
+                        <constraint firstAttribute="width" secondItem="P6d-0x-mkR" secondAttribute="height" multiplier="1:1" id="ndE-Cp-AOY"/>
+                    </constraints>
                     <state key="normal" image="D-ShareIcon"/>
                     <connections>
                         <action selector="shareButtonPressed" destination="-1" eventType="touchUpInside" id="0RN-Tp-7Hn"/>
-                    </connections>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NYU-eQ-zAf">
-                    <rect key="frame" x="279" y="25" width="25" height="25"/>
-                    <state key="normal" image="C-MuisIcon-Black"/>
-                    <connections>
-                        <action selector="playButtonPressed" destination="-1" eventType="touchUpInside" id="y02-Yy-Ndu"/>
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="发现" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lPU-Je-cXV">
@@ -32,14 +30,25 @@
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ISc-xL-zQt" customClass="HXMusicStateView">
+                    <rect key="frame" x="267" y="16" width="44" height="44"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="ISc-xL-zQt" secondAttribute="height" multiplier="1:1" id="u3s-83-RzF"/>
+                    </constraints>
+                    <connections>
+                        <outlet property="delegate" destination="-1" id="TOv-FM-CJf"/>
+                    </connections>
+                </view>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="NYU-eQ-zAf" secondAttribute="trailing" constant="16" id="Eik-bX-F7a"/>
-                <constraint firstItem="NYU-eQ-zAf" firstAttribute="centerY" secondItem="lPU-Je-cXV" secondAttribute="centerY" id="Pis-Nx-aVS"/>
+                <constraint firstItem="ISc-xL-zQt" firstAttribute="centerY" secondItem="lPU-Je-cXV" secondAttribute="centerY" id="FPd-EW-wGE"/>
+                <constraint firstItem="ISc-xL-zQt" firstAttribute="width" secondItem="P6d-0x-mkR" secondAttribute="width" id="WO6-7x-Nit"/>
+                <constraint firstAttribute="trailing" secondItem="ISc-xL-zQt" secondAttribute="trailing" constant="9" id="cmz-Ea-d5v"/>
                 <constraint firstItem="P6d-0x-mkR" firstAttribute="centerY" secondItem="lPU-Je-cXV" secondAttribute="centerY" id="gHq-SS-DPS"/>
                 <constraint firstItem="lPU-Je-cXV" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" multiplier="1.3" constant="-4" id="xOT-A4-tgO"/>
-                <constraint firstItem="P6d-0x-mkR" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="yEa-2Y-6uJ"/>
+                <constraint firstItem="P6d-0x-mkR" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="9" id="yEa-2Y-6uJ"/>
                 <constraint firstItem="lPU-Je-cXV" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="znS-QZ-IFq"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
@@ -48,7 +57,6 @@
         </view>
     </objects>
     <resources>
-        <image name="C-MuisIcon-Black" width="25" height="25"/>
         <image name="D-ShareIcon" width="25" height="25"/>
     </resources>
 </document>
