--- a/mia/Views/Me/NavigationBar/HXMeNavigationBar.xib
+++ b/mia/Views/Me/NavigationBar/HXMeNavigationBar.xib
@@ -9,7 +9,7 @@
             <connections>
                 <outlet property="backgroundView" destination="uos-yF-YdI" id="Tfb-Ue-mMi"/>
                 <outlet property="containerView" destination="iN0-l3-epB" id="Cfh-c2-gAM"/>
-                <outlet property="musicButton" destination="bkl-J8-i9o" id="cLR-IG-eNh"/>
+                <outlet property="stateView" destination="cuF-Ie-J50" id="VsC-AW-tte"/>
                 <outlet property="titleLabel" destination="elw-aF-JWl" id="f9a-gD-8a4"/>
             </connections>
         </placeholder>
@@ -49,25 +49,25 @@
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bkl-J8-i9o">
-                            <rect key="frame" x="260" y="0.0" width="60" height="44"/>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cuF-Ie-J50" customClass="HXMusicStateView">
+                            <rect key="frame" x="256" y="0.0" width="64" height="44"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="60" id="p3J-YJ-Hgj"/>
+                                <constraint firstAttribute="width" constant="64" id="pmM-CS-QNc"/>
                             </constraints>
-                            <state key="normal" image="PF-PlayIcon"/>
                             <connections>
-                                <action selector="musicButtonPressed" destination="-1" eventType="touchUpInside" id="eZy-J3-ABD"/>
+                                <outlet property="delegate" destination="-1" id="00K-Lm-f1W"/>
                             </connections>
-                        </button>
+                        </view>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="bkl-J8-i9o" firstAttribute="top" secondItem="Fd4-HS-c5h" secondAttribute="top" id="8Vd-cC-9cQ"/>
-                        <constraint firstAttribute="bottom" secondItem="bkl-J8-i9o" secondAttribute="bottom" id="BuK-7i-PV5"/>
+                        <constraint firstAttribute="trailing" secondItem="cuF-Ie-J50" secondAttribute="trailing" id="Umj-oU-fRm"/>
+                        <constraint firstAttribute="bottom" secondItem="cuF-Ie-J50" secondAttribute="bottom" id="YVC-wE-pj0"/>
                         <constraint firstItem="elw-aF-JWl" firstAttribute="centerX" secondItem="Fd4-HS-c5h" secondAttribute="centerX" id="ihl-Iv-E5V"/>
                         <constraint firstAttribute="height" constant="44" id="o8p-ip-lZN"/>
-                        <constraint firstAttribute="trailing" secondItem="bkl-J8-i9o" secondAttribute="trailing" id="tAo-wz-bWX"/>
                         <constraint firstItem="elw-aF-JWl" firstAttribute="centerY" secondItem="Fd4-HS-c5h" secondAttribute="centerY" id="uIz-N5-MbO"/>
+                        <constraint firstItem="cuF-Ie-J50" firstAttribute="top" secondItem="Fd4-HS-c5h" secondAttribute="top" id="wmD-DK-NKb"/>
                     </constraints>
                 </view>
             </subviews>
@@ -85,7 +85,4 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
         </view>
     </objects>
-    <resources>
-        <image name="PF-PlayIcon" width="25" height="25"/>
-    </resources>
 </document>
