完善：播放时，播放器入口按钮动画

--- a/mia/Base.lproj/Discovery.storyboard
+++ b/mia/Base.lproj/Discovery.storyboard
@@ -53,6 +53,9 @@
                             <constraint firstItem="qW7-Qm-70h" firstAttribute="leading" secondItem="9aB-yR-gJ9" secondAttribute="leading" id="vHb-aW-l9b"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="header" destination="qW7-Qm-70h" id="deA-77-ekm"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zai-PF-gZM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
