--- a/mia/Views/Common/HXMusicStateView/HXMusicStateView.xib
+++ b/mia/Views/Common/HXMusicStateView/HXMusicStateView.xib
@@ -18,6 +18,7 @@
             <subviews>
                 <imageView contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CM-MuisIcon-Black" translatesAutoresizingMaskIntoConstraints="NO" id="Zsr-bO-daB">
                     <rect key="frame" x="0.0" y="0.0" width="60" height="44"/>
+                    <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </imageView>
             </subviews>
             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
