完善：点“说说此刻的想法”后，应该进入详情页并且拉起发表评论的键盘

--- a/mia/Views/Discovery/Content/HXDiscoveryCardView.xib
+++ b/mia/Views/Discovery/Content/HXDiscoveryCardView.xib
@@ -206,7 +206,7 @@
         </tapGestureRecognizer>
         <tapGestureRecognizer id="KSM-fD-ufy" userLabel="Comment Gesture">
             <connections>
-                <action selector="showCommentAction" destination="-1" id="dhQ-Ci-eeM"/>
+                <action selector="showDetailAction" destination="-1" id="PKE-st-B2D"/>
             </connections>
         </tapGestureRecognizer>
     </objects>
