--- a/mia/Base.lproj/MessageCenter.storyboard
+++ b/mia/Base.lproj/MessageCenter.storyboard
@@ -9,7 +9,7 @@
         <!--HXMessageCenterViewController-->
         <scene sceneID="uJz-aT-64V">
             <objects>
-                <tableViewController storyboardIdentifier="HXMessageCenterViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="mdq-lx-A46" userLabel="HXMessageCenterViewController" customClass="HXMessageCenterViewController" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="HXMessageCenterViewController" hidesBottomBarWhenPushed="YES" useStoryboardIdentifierAsRestorationIdentifier="YES" id="mdq-lx-A46" userLabel="HXMessageCenterViewController" customClass="HXMessageCenterViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" id="Bcs-xs-hDs">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
