--- a/mia/Views/Common/HXNoNetworkView/HXNoNetworkView.xib
+++ b/mia/Views/Common/HXNoNetworkView/HXNoNetworkView.xib
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
@@ -35,7 +34,7 @@
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tQo-iW-Kn0">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tQo-iW-Kn0">
                             <rect key="frame" x="30" y="200" width="260" height="40"/>
                             <color key="backgroundColor" red="0.26666666666666666" green="0.81960784313725488" blue="0.76078431372549016" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
@@ -49,7 +48,7 @@
                                 <action selector="playButtonPressed" destination="iN0-l3-epB" eventType="touchUpInside" id="JBJ-g7-wRg"/>
                             </connections>
                         </button>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="或" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P2a-mJ-R74">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="或" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P2a-mJ-R74">
                             <rect key="frame" x="152" y="165" width="16" height="20"/>
                             <fontDescription key="fontDescription" type="system" weight="thin" pointSize="16"/>
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -90,7 +89,7 @@
                         <constraint firstAttribute="width" secondItem="Ax0-pt-vS2" secondAttribute="height" multiplier="1:1" id="67f-i3-Cht"/>
                         <constraint firstAttribute="width" constant="32" id="Rdn-CE-M6E"/>
                     </constraints>
-                    <state key="normal" image="HP-ProfileIcon"/>
+                    <state key="normal" image="C-AvatarDefaultIcon"/>
                     <connections>
                         <action selector="userHeaderButtonPressed" destination="iN0-l3-epB" eventType="touchUpInside" id="OlU-YV-ClP"/>
                     </connections>
@@ -118,7 +117,7 @@
         </view>
     </objects>
     <resources>
-        <image name="HP-ProfileIcon" width="32" height="32"/>
+        <image name="C-AvatarDefaultIcon" width="75" height="75"/>
         <image name="HP-ShareIcon" width="32" height="32"/>
         <image name="NN-WiFiIcon" width="75" height="75"/>
     </resources>
