--- a/mia/Views/Common/HXInfectView/HXInfectView.xib
+++ b/mia/Views/Common/HXInfectView/HXInfectView.xib
@@ -11,6 +11,7 @@
                 <outlet property="collectionView" destination="0Vp-v6-J8v" id="Xw3-bV-6if"/>
                 <outlet property="collectionViewWidthConstraint" destination="DrF-um-OCT" id="nlk-9N-yRJ"/>
                 <outlet property="infectButton" destination="c1K-Da-9IC" id="6Vq-R9-hY8"/>
+                <outlet property="promptLabel" destination="A8v-bd-2O7" id="x13-iI-d6t"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -18,6 +19,22 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="32"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c1K-Da-9IC">
+                    <rect key="frame" x="0.0" y="0.0" width="32" height="32"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="c1K-Da-9IC" secondAttribute="height" multiplier="1:1" id="TZ3-DY-tKR"/>
+                    </constraints>
+                    <state key="normal" image="D-InfectIcon"/>
+                    <connections>
+                        <action selector="infectButtonPressed" destination="-1" eventType="touchUpInside" id="fOy-Sw-jgb"/>
+                    </connections>
+                </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="妙推一下，让更多人听见" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A8v-bd-2O7">
+                    <rect key="frame" x="47" y="7" width="165" height="18"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <color key="textColor" red="0.50196078431372548" green="0.50196078431372548" blue="0.50196078431372548" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="0Vp-v6-J8v">
                     <rect key="frame" x="47" y="0.0" width="100" height="32"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -35,21 +52,13 @@
                         <outlet property="delegate" destination="-1" id="bbO-kg-Dk8"/>
                     </connections>
                 </collectionView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c1K-Da-9IC">
-                    <rect key="frame" x="0.0" y="0.0" width="32" height="32"/>
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="c1K-Da-9IC" secondAttribute="height" multiplier="1:1" id="TZ3-DY-tKR"/>
-                    </constraints>
-                    <state key="normal" image="D-InfectIcon"/>
-                    <connections>
-                        <action selector="infectButtonPressed" destination="-1" eventType="touchUpInside" id="fOy-Sw-jgb"/>
-                    </connections>
-                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="0Vp-v6-J8v" firstAttribute="leading" secondItem="c1K-Da-9IC" secondAttribute="trailing" constant="15" id="GUy-6Z-Lc8"/>
+                <constraint firstItem="A8v-bd-2O7" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="GYh-ei-Vsf"/>
                 <constraint firstItem="0Vp-v6-J8v" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="HcO-5z-nm4"/>
+                <constraint firstItem="A8v-bd-2O7" firstAttribute="leading" secondItem="c1K-Da-9IC" secondAttribute="trailing" constant="15" id="VLG-Jt-GDk"/>
                 <constraint firstAttribute="bottom" secondItem="0Vp-v6-J8v" secondAttribute="bottom" id="erj-75-QkG"/>
                 <constraint firstAttribute="bottom" secondItem="c1K-Da-9IC" secondAttribute="bottom" id="n0E-nu-caq"/>
                 <constraint firstItem="c1K-Da-9IC" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="xDR-5v-DyU"/>
